@@ -1,3 +1,9 @@
+2004-07-13  Dossy Shiobara <dossy@panoptic.com>
+
+	* include/nsthread.h (1.24.2.1): OpenBSD 3.5 doesn't define
+	  ENOTSUP, so we'll define it ourselves.  Closes SF Bug #985076.
+	  Backported from HEAD.
+
 2004-07-02  Dossy Shiobara <dossy@panoptic.com>
 
 	* nsd/mimetypes.c (1.11.2.1): Ns_GetMimeType() was returning
